Bug 169456 - FILEOPEN PPTX Text placeholder objects background becomes None instead of solid white
Summary: FILEOPEN PPTX Text placeholder objects background becomes None instead of sol...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.0.2 target:...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PPTX-MasterSlide PPTX-Textbox
  Show dependency treegraph
 
Reported: 2025-11-14 21:42 UTC by Gabor Kelemen (Collabora)
Modified: 2025-12-27 09:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from PP 2016 (17.96 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-11-14 21:42 UTC, Gabor Kelemen (Collabora)
Details
The example file in PP 2016 and LO master (92.12 KB, image/png)
2025-11-14 21:43 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-11-14 21:42:50 UTC
Created attachment 203988 [details]
Example file from PP 2016

Attached example file has a Text Placeholder object on the master slide, which has white background in PP.
When opened in Impress, this is imported correctly on the master slide, but on the first slide of the presentation, it is not inherited and the background setting becomes "None".

1. Open attached file
-> The top right corner Text Placeholder is transparent, without border line, instead of having white background and green border line.
2. View - Master slide
-> The top right corner Text Placeholder is correct: white background and green border line.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 16; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

Seems to have started in 5.2 with:

commit bc14ec0f86647a39a954bd1c32b1671c22d7f475
Author: Matus Uzak <matus.uzak@gmail.com>
Date:   Sat Mar 12 21:11:42 2016 +0100

    tdf#95932: PPTX import: Incorrect inheritance of shape style
    
    Inheritance Order: 1. Reference Shape's properties, 2. Shape style,
    3. Shape properties.
    
    You MUST NOT inherit reference shape's style, because it's already
    part of inherited reference shape's properties.  That would overwrite
    shape properties applied at point 3, at slide layout/master level.
Comment 1 Gabor Kelemen (Collabora) 2025-11-14 21:43:53 UTC
Created attachment 203989 [details]
The example file in PP 2016 and LO master

Drawing shape from master slide and drawing shape from normal slide work fine.
Comment 2 Regina Henschel 2025-11-15 23:32:41 UTC
I see the difference between rendering in PowerPoint and LibreOffice.

If the shape has an explicitly set background, the background is rendered in LibreOffice. But in the attached file, the background is not set and thus inherited from somewhere.

Tested in Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

and in Version: 5.2.0.0.alpha0+
Build-ID: 5bb308a9ad16f6002486a60e4a753693818580b6
CPU-Threats: 32; BS-Version: Windows 6.2; UI-Render: Standard; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-04-20_19:07:06
Gebietsschema: de-DE (de_DE)

The fill was white and stroke was green in Version: 5.2.0.0.alpha0+
Build ID: e413549dc8b5669a806eeabc30c7d6f92723a882
CPU Threads: 32; OS Version: Windows 6.2; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-12-28_23:26:49
Locale: de-DE (de_DE)
Comment 3 Commit Notification 2025-12-17 09:20:10 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7ab8ed87dca177f22b162df5dfbba3052b82596d

tdf#169456 Fix the placeholder of master slide style issue

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-12-17 15:07:01 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/d94fb20384aebd68d16182c53cc21d4e3c9fc03c

tdf#169456 Fix the placeholder of master slide style issue

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-12-27 07:31:41 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/42dcb90ed2fa5d5cb8fb413946ac22eec1890be4

tdf#169456 Fix the placeholder of master slide style issue

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.