tdf#169456 Fix the placeholder of master slide style issue

In some cases we see the object in the slide has no fill syle directly but parent object
in master slide can has fill style.

We should apply the style to object in this case.

Signed-off-by: Gülşah Köse <gulsah.kose@collabora.com>
Change-Id: I0b061cfde4ac2067c84383764770f155564531a3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195368
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit 92b0bcb3136a77de97415b900a0e9b4a271715ae)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195672
Tested-by: Jenkins
Reviewed-by: Gabor Kelemen <gabor.kelemen@collabora.com>
(cherry picked from commit 7ab8ed87dca177f22b162df5dfbba3052b82596d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195768